// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'tstyche' command only the files matched by the 'testFileMatch' patterns are selected: stdout 1`] = `
"uses TypeScript <<version>> with ./feature/__tests__/tsconfig.json

pass ./feature/__tests__/isNumber.test.ts
  + is number?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'number'.
"
`;

exports[`'tstyche' command when called without arguments, selects all matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
pass ./feature/__tests__/isString.tst.ts
pass ./__typetests__/isNumber.test.ts
pass ./__typetests__/isString.test.ts

Targets:    1 passed, 1 total
Test files: 4 passed, 4 total
Tests:      4 passed, 4 total
Assertions: 4 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`'tstyche' command when multiple search strings are provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
pass ./feature/__tests__/isString.tst.ts
pass ./__typetests__/isString.test.ts

Targets:    1 passed, 1 total
Test files: 3 passed, 3 total
Tests:      3 passed, 3 total
Assertions: 3 passed, 3 total
Duration:   <<timestamp>>

Ran test files matching 'string' or 'feature'.
"
`;

exports[`'tstyche' command when relative search string is provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
  + is number?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching './feature/__tests__/isNumber'.
"
`;

exports[`'tstyche' command when single search string is provided, selects matching files: stdout 1`] = `
"uses TypeScript <<version>>

pass ./feature/__tests__/isNumber.tst.ts
pass ./__typetests__/isNumber.test.ts

Targets:    1 passed, 1 total
Test files: 2 passed, 2 total
Tests:      2 passed, 2 total
Assertions: 2 passed, 2 total
Duration:   <<timestamp>>

Ran test files matching 'number'.
"
`;
